[package]
name = "ssn"
version = "0.1.0"
authors = ["techno-tanoC <develop.tanoc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
serde = "1.0.106"
serde_json = "1.0.51"
reqwest = { version = "0.10.4", features = ["blocking", "json", "native-tls-vendored"] }
